--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     text-shadow: 0 0 15px #b38bff, 0 0 30px purple;
     margin-top: 40px;
   }
-
+.glow-line {
+  font-size: 32px;
+  color: #b38bff;
+  text-shadow: 0 0 10px #b38bff, 0 0 25px purple;
+  margin: 10px 0;
+}
   /* Comeback image styling */
   .comeback-img {
     width: 300px;
@@ -95,6 +100,16 @@
 <body>
 
 <h1>BTS Comeback 💜</h1>
+  <!-- Existing glow lines -->
+<h2 class="glow-line">We Are Back 💜</h2>
+<h3 class="glow-line">ARMY, Let’s Celebrate 🎉</h3>
+<h4 class="glow-line">Back with Music & Magic ✨</h4>
+
+<!-- New additional lines -->
+<h5 class="glow-line">Shining Bright, Like BTS ✨</h5>
+<h6 class="glow-line">Together Again, Stronger Than Ever 💪</h6>
+
+<h6 class="glow-line">Our Time is Now 💜</h6>
 
 <!-- Comeback image -->
 <img src="comeback.jpg" alt="BTS Comeback" class="comeback-img">
